# rtic-core

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS  bors.toml
.github/workflows/: build.yml
ci/: script.sh
src/: lib.rs
