[package]
authors = [
  "The Real Time For the Masses developers",
  "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Core abstractions of the Real Time For the Masses framework"
documentation = "https://docs.rs/rtfm-core"
keywords = []
license = "MIT OR Apache-2.0"
name = "rtfm-core"
repository = "https://github.com/rtfm-rs/rtfm-core"
version = "0.4.0"
edition = "2018"

[dependencies]
mutex-trait = "0.2.0"
embedded-time = { git = "https://github.com/PTaylor-FluenTech/embedded-time", branch = "master" }
